--- a/style.css
+++ b/style.css
@@ -1,50 +1,54 @@
-:root {
-    --vermelho: #E50914;
-    --preta: #141414;
+:root{
+    --vermelho:#E50914;
+    --preta:#141414;
 }
 
-* {
-    margin: 0;
-    padding: 0;
+*{
+    margin:0;
+    padding:0;
     box-sizing: border-box;
 }
 
-body {
-    background: var(--preta);
-    font-family: 'Gotham', Times, serif;
-    color: white;
+body{
+   background: var(--preta);
+   font-family: 'Arial', Times, serif;
+   color:white;
 }
 
-header .container {
-    display: flex;
+
+header .container{
+    display:flex;
     flex-direction: row;
     align-items: center;
     justify-content: space-between;
+    
 }
 
-header .logo {
+header .logo{
     margin-left: 5px;
     color: var(--vermelho);
     font-family: 'Gotham', Times;
-    font-size: 40px;
+    font-size:40px;
 }
 
-header nav a {
-    text-decoration: none;
-    color: #AAAAAA;
+header nav a{
+    text-decoration:none;
+    color:#AAA;
     margin-right: 10px;
 }
 
-header nav a:hover {
-    color: #FFFFFF;
+
+header nav a:hover{
+    color:#fff;
 }
 
-.filme-principal {
-    font-size: 16px;
-    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%), url('/img/img1.jpg');
-    
-    height: 400px;
-    background-size: cover;
+.filme-principal{
+    font-size:16px;
+    background: linear-gradient(rgba(0,0,0,.50),rgba(0,0,0,.50)100%),  url('/img/img1.jpg');
+
+    height:400px;
+    background-size:cover;
+ 
 
     display: flex;
     flex-direction: column;
@@ -52,23 +56,25 @@ header nav a:hover {
     align-items: flex-start;
 }
 
-.filme-principal .descricao {
-    margin-bottom: 10px;
+
+.filme-principal .descricao{
+    margin-top: 10px;
     margin-bottom: 40px;
 }
 
-.filme-principal .titulo {
-    margin-top: 20px;
+
+.filme-principal .titulo{
+    margin-top: 15%;
     font-size: 40px;
-    font-family: 'Trebuchet MS', sans-serif;
+    font-family: 'Trebuchet MS', Arial, sans-serif;
 }
 
-.botao {
+.botao{
     background-color: rgba(0,0,0,.50);
-    border: none;
+    border:none;
     color: white;
 
-    padding: 15px 30px;
+    padding:15px 30px;
     margin-right: 15px;
     font-size: 12px;
 
@@ -76,11 +82,32 @@ header nav a:hover {
     transition: .3s ease all;
 }
 
-.botao:hover {
-    background-color: white;
-    color: black;
+.botao:hover{
+    background-color:white;
+    color:black;
 }
 
-.botao i {
+.botao i{
     margin-right: 8px;
+}
+
+
+.container{
+    margin-left: 20px;
+}
+
+.filme-principal .container{
+    width: 70%;
+}
+
+.box-filme{
+    height: 100%;
+    width: 100%;
+    display: block;
+    cursor: pointer;
+}
+
+
+.carrosel-filmes{
+    margin-top:5px;
 }
